2005-06-05  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_tags.at: 'tag' on a non-existent revid should fail.
	* commands.cc (complete): Fail on non-existent revids.

2005-05-29  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_epoch.at: Typo.
	* tests/t_automate_certs.at, tests/t_selector_later_earlier.at:
	Throw in some calls to CANONICALISE, maybe this will help on
	Win32...

2005-06-05  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc, netcmd.cc: Style cleanups (mostly whitespace).

2005-06-04  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc (process_hello_cmd): Warn about collection/regex
	usage when talking to an old server.

2005-06-04  Derek Scherger  <derek@echologic.com>

	* commands.cc (update): update MT/work based on the changes
	between the chosen revision and the new merge revision
	* tests/t_update_with_pending_drop.at: 
	* tests/t_update_with_pending_add.at: 
	* tests/t_update_with_pending_rename.at: un-XFAIL and clean up now
	that things work

2005-06-04  Timothy Brownawell  <tbrownaw@gmail.com>

	* netcmd.{cc,hh}, netsync.cc: Move {read,write}_*_cmd_payload
	to netcmd::{read,write}_*_cmd .
	* netcmd.cc, netsync.cc: Compatibility infrastructure.
	* netsync.cc: Interoperate with v4 servers.

2005-06-03  Timothy Brownawell  <tbrownaw@gmail.com>

	* automate.cc (print_some_output): Fix compiler warning.

2005-06-04  Derek Scherger  <derek@echologic.com>

	* app_state.cc (app_state): initialize diffs to false; it seemed
	to be defaulting to true for me

2005-06-04  Derek Scherger  <derek@echologic.com>

	* tests/t_update_with_pending_drop.at: 
	* tests/t_update_with_pending_add.at: 
	* tests/t_update_with_pending_rename.at: 
	* tests/t_restricted_commit_with_inodeprints.at: new bug reports
	* testsuite.at: call them

2005-06-04  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc 
	(note_state_at_branch_beginning): Move time back when
	there are known commits on a branch.

2005-06-02  graydon hoare  <graydon@pobox.com>
