@@ -1,5 +1,13 @@
 2005-06-05  Nathaniel Smith  <njs@codesourcery.com>
 
+	* tests/t_bad_packets.at: Expect certs on a non-existent rev to
+	fail.  Run db check instead.
+	* commands.cc (complete): Let callers specify they're okay with
+	non-existent revisions.
+	(CMD(trusted)): So specify.
+
+2005-06-05  Nathaniel Smith  <njs@codesourcery.com>
+
 	* tests/t_tags.at: 'tag' on a non-existent revid should fail.
 	* commands.cc (complete): Fail on non-existent revids.
 
